[package]
name = "qk_run"
version = "0.1.0"
authors = ["Gabi Purcaru <gabi@purcaru.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
rusoto_dynamodb = "0.45"
rusoto_core = "0.45"
tokio = { version = "0.2", features = ["full"] }
md5 = "0.7"
lazy_static = "1.4"
yaml-rust = "0.4.4"
regex = "1"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["handlebars_templates", "serve"]