[package]
name = "qk_run"
version = "0.1.0"
authors = ["Gabi Purcaru <gabi@purcaru.com>"]
edition = "2018"
default-run = "main"

[dependencies]
rocket = "0.4"
rocket_lamb = "0.6"
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
rusoto_dynamodb = "0.42"
rusoto_core = "0.42"
tokio = { version = "0.2", features = ["full"] }
md5 = "0.7"
lazy_static = "1.4"
yaml-rust = "0.4.4"
regex = "1"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates", "serve", "json"]