[package]
name = "qk_run"
version = "0.1.0"
authors = ["Gabi Purcaru <gabi@purcaru.com>"]
edition = "2018"
default-run = "main"

[dependencies]
rocket = {version = "0.5.0-rc.2", features=["json"]}
lambda-web = { version = "0.1.2", features=["rocket05"] }
maplit = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
rusoto_dynamodb = "0.48.0"
rusoto_core = "0.48.0"
tokio = { version = "1.19.2", features = ["full"] }
md5 = "0.7"
lazy_static = "1.4"
yaml-rust = "0.4.4"
regex = "1"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["handlebars_templates", "serve", "json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]